# app/Core/Entities/PriceList.php
@@ -1,0 +1,16 @@
+<?php
+
+namespace App\Core\Entities;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+class PriceList extends Model
+{
+    use HasFactory;
+
+    protected $fillable = [
+        'product',
+        'price'
+    ];
+}
